# StaticScript

./: .gitattributes  .gitignore  .gitlab-ci.yml  .npmignore  .travis.yml  Cargo.toml  LICENSE  README.md  language.d.ts  package-lock.json  package.json  rust-toolchain.toml  staticscript.d.ts  tsconfig.json
.github/workflows/: push.yml
docker/dev/: README.md
docker/dev/node-10/llvm-6/: Dockerfile
docker/dev/node-10/llvm-7/: Dockerfile
docker/dev/node-10/llvm-8/: Dockerfile
docker/dev/node-11/llvm-6/: Dockerfile
docker/latest/: Dockerfile
docker/next/: Dockerfile
docs/assets/logo/: static-script-logo.ai
js/: diagnostic.host.ts  utils.ts
js/backend/error/: unsupported.error.ts
js/backend/llvm/: cpp.mangler.ts
runtime/: CMakeLists.txt  helpers.cpp  lib.runtime.d.ts
runtime-test/: CMakeLists.txt  main.cpp  main.ll
sandbox/: do-simple-math.ts
src/: cli.js  cli.ts  constants.ts  diagnostic.host.ts  utils.ts
src/Backend/LLVM/: index.ts
src/Frontend/TypeScript/: index.js  index.ts
src/backend/error/: index.ts  unsupported.error.ts
src/backend/llvm/: c.mangler.ts  context.ts  cpp.mangler.ts  index.ts  mangler.interface.ts  native-type-resolver.ts  native-type.ts  node-generate.interface.ts  scope.ts  value.ts
src/backend_core/: Cargo.toml
src/backend_core/src/: lib.rs
src/backend_llvm/: Cargo.toml
src/backend_llvm/src/: lib.rs  linker.rs  types.rs
src/backend_llvm/src/transformer/: binary.rs  function.rs  mod.rs  scope.rs  statement.rs
src/cli/: Cargo.toml
src/cli/src/: check.rs  compile.rs  main.rs
src/frontend/: Cargo.toml
src/frontend/src/: binder.rs  frontend.rs  inference.rs  lib.rs  main.rs  project.rs  tsconfig.rs
src/frontend/tests/: compiling.rs
src/playground/: Cargo.toml  package.json
src/playground/src/: lib.rs
src/playground/static/: index.html
src/runtime/: Cargo.toml
src/runtime/src/: lib.rs
tests/: runner.ts
tests/snapshots/examples/: calculate-pi-gregory-leibniz.ts  calculate-pi-gregory-leibniz.ts.stdout  calculate-pi-monte.ts  calculate-pi.ts  factorial.ts  factorial.ts.stdout
tests/snapshots/general/: branch.ts  class.ts  typed.array.ts  typeof.ts  typeof.ts.stdout
tests/snapshots/math/: binary-expression.ts  binary-expression.ts.stdout  do.ts  for.ts  for.ts.stdout  number.ts  return.ts  while.ts
(+29 files in other folders)
