[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frontend = { version = "0.0.1", path = "../frontend" }
structopt = { version = "0.3", default-features = false }
anyhow = { version = "1.0", default-features = false }
err-derive = "0.3.0"